--- a/app/globals.css
+++ b/app/globals.css
@@ -4,9 +4,7 @@
 
 .DialogStyling{
   padding-left: 2rem !important;
-}
-.dialog-content-wrapper {
-  max-height: 80vh; /* İçeriğin en fazla ekran yüksekliğinin %80'i kadar olmasını sağlar */
+   max-height: 80vh;
 }
 .swiper-button-next{
   color: white !important;
